# awesome-claude-code-zh

./: .gitignore  .pre-commit-config.yaml  .processed_repos.json  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT.md  HOW_IT_WORKS.md  Makefile  README-GITHUB-PAGES.md  README-en.md  README-zh-TW.md  README.md  THE_RESOURCES_TABLE.csv  _config.yml  code-of-conduct.md  index.html  package-lock.json  package.json  pyproject.toml  script.js  styles.css
.claude/commands/: add-new-resource.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: repository-enhancement.yml  submit-resource.yml
.github/workflows/: after-merging-new-resource.yml  approve-resource-submission.yml  badge-pr-automation.yml  pages.yml  protect-labels.yml  sync-upstream.yml  validate-links.yml  validate-resource-submission.yml
.myob/: resource-metadata.csv
.myob/scripts/: download_resources.py  generate_readme.py  resource-metadata.csv  resource-metadata.test.csv  test_validate_links.py  validate_links.py  validate_links_v2.py
claude-md/: index.md
docs/: MULTILINGUAL_SUMMARY.md  SYNC_UPSTREAM.md
docs/i18n/: README.md  terminology.md
hooks/: pre-push
resources/claude.md-files/AI-IntelliJ-Plugin/: CLAUDE.md
resources/claude.md-files/AVS-Vibe-Developer-Guide/: CLAUDE.md
resources/claude.md-files/AWS-MCP-Server/: CLAUDE.md
resources/claude.md-files/Basic-Memory/: CLAUDE.md
scripts/: BADGE_AUTOMATION_SETUP.md  README.md  add_resource.py  badge_issue_notification.py  create_resource_pr.py  download_resources.py  generate_readme.py  generate_resource_id.py  git_utils.py  parse_issue_form.py  process_resources_to_csv.py  quick_id.py  sort_resources.py  submit_resource.py  sync-upstream.sh  validate_links.py  validate_new_resource.py  validate_single_resource.py
templates/: README.template.md  readme-structure.yaml  resource-overrides.yaml
tests/: test_get_last_resource.py
(+7 files in other folders)
